--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <p class="hello-p">El portal de podcast que explora el mundo de la programación y la tecnología. Nuevos 
                     episodios todos los jueves cada 15 días.
                 </p>
+                <h1>hola </h1>
                 <div class="link-div hello-link">
                     <a class="link" href="#" class="hello-link">conoce más</a>
                 </div>
