--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fontawesome kit -->
     <script src="https://kit.fontawesome.com/aa7e44f5a7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
     <title>Podcast</title>
 </head>
@@ -38,7 +38,7 @@
                 <p class="hello-p">El portal de podcast que explora el mundo de la programación y la tecnología. Nuevos 
                     episodios todos los jueves cada 15 días.
                 </p>
-                <h1>hola </h1>
+               
                 <div class="link-div hello-link">
                     <a class="link" href="#" class="hello-link">conoce más</a>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="img-div">
                     <img class="img-phone" src="/assets/phone.png" alt="">
                 </div>
-                <div class="article-nosotros">
+                <div class="article-nosotros"> 
                     <article>
                         <h2 class="nosotros-h2">De dónde venimos</h2>
                         <p class="nosotros-p">Our posturings, our imagined self-importance, the delusion that we have some privileged
