--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="episodios-div">
             <section id="episodios" class="section-episodios">
-                <h2 class="h2-episodios h2-color">Episodios</h2>
+                <h2 class="h2-episodios h2-color">Episodios.</h2>
                 <div class="img-episodios">
                     <div class="imagen">
                         <img class="img-normal" src="assets/embed1.png" alt="image js party ">
